fix banner z-index

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -304,7 +304,7 @@ $deco-dot-size: 8px;
   bottom: 18px;
   left: 50%;
   transform: translate(-50%);
-  z-index: 999;
+  z-index: 1010;
   width: 60vw;
   box-shadow: 0 5px 4px 0 rgba(0,0,0,.26);
   @include media-breakpoint-up(md) {
